add jdk and dstat

--- a/1.5.1/Dockerfile
+++ b/1.5.1/Dockerfile
@@ -16,10 +16,10 @@
 # limitations under the License.
 ###############################################################################
 
-FROM openjdk:8-jre-alpine
+FROM openjdk:8-jdk
 
 # Install dependencies, bash and su-exec for easy step-down from root
-RUN apk add --no-cache bash libc6-compat snappy 'su-exec>=0.2'
+RUN apk add --no-cache dstat  bash libc6-compat snappy 'su-exec>=0.2'
 
 # Configure Flink version
 ENV FLINK_VERSION=1.5.1 \
